[package]
name = "tf-learn"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.14.0", features = ["tensorflow_gpu", "experimental_training", "tensorflow_unstable"] }